Updated fff to dfdfdf

--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
         .stopwatch {
             font-size: 180px;
             margin: 20px;
+            color: #dfdfdf;
+        }
+        button#start,button#stop {
+            background-color: #dfdfdf;
         }
 
         .modal {
